# lfeats

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py
docs/source/api/: core.rst  types.rst
lfeats/: __init__.py  cli.py  version.py
lfeats/interfaces/: __init__.py  extractor.py  resampler.py  types.py  utils.py
lfeats/models/: __init__.py  base.py  contentvec.py  data2vec.py  data2vec2.py  ecapa_tdnn.py  emotion2vec.py  emotion2vec_plus.py  higgs_audio.py  hubert.py  manager.py  next_tdnn.py  r_spin.py  r_vector.py  redimnet.py  rspin.py  spidr.py  spin.py  sslzip.py  unispeech_sat.py  wav2vec2.py  wavlm.py  wavlm_sv.py  whisper.py  x_codec.py  x_vector.py
lfeats/resamplers/: __init__.py  base.py  lilfilter.py  manager.py  scipy.py  soxr.py  torchaudio.py
lfeats/utils/: __init__.py  io.py  paths.py  validation.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_models.py  test_readme.py  test_resampler.py  utils.py
tests/data/: input.scp
tools/: Makefile
