[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lfeats"
authors = [{ name = "Takenori Yoshimura" }]
maintainers = [
  { name = "Takenori Yoshimura", email = "takenori@sp.nitech.ac.jp" },
]
description = "A unified interface to extract hidden representations from speech foundation models"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pytorch", "speech-processing", "self-supervised-learning"]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy >= 1.23.0",
  "scipy >= 1.9.2",
  "torch >= 2.6.0",
  "torchaudio >= 2.6.0",
  "transformers >= 4.30.0",
  "onnxruntime >= 1.19.0",
  "hydra-core >= 1.3.0",
  "hyperpyyaml >= 0.0.1",
  "huggingface-hub >= 0.23.0",
  "requests >= 2.27.0",
  "filelock >= 3.10.0",
  "parfive >= 2.1.0",
  "platformdirs >= 2.0.0",
  "lilfilter >= 0.0.1",
  "soxr >= 0.4.0",
  "soundfile >= 0.10.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "matplotlib",
  "mdformat",
  "numpydoc",
  "pkginfo",
  "pydata-sphinx-theme",
  "pyright",
  "pytest",
  "pytest-cov",
  "ruff",
  "sphinx",
  "twine",
]

[project.urls]
Documentation = "https://takenori-y.github.io/lfeats/stable/"
Source = "https://github.com/takenori-y/lfeats"

[project.scripts]
lfeats = "lfeats.cli:main"

[tool.hatch.build.targets.sdist]
only-include = ["lfeats"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "lfeats/version.py"

[tool.ruff]
exclude = ["third_party"]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["D", "E", "I", "UP"]
ignore = [
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "except", "raise", "verbose"]

[tool.pyright]
exclude = ["**/third_party"]

[tool.pytest.ini_options]
addopts = "-s -x"
